# coqui-ai-TTS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  frozen_requirements.txt  pyproject.toml  requirements.dev.txt  requirements.ja.txt  requirements.txt  setup.py  t.py  xtts2.py
.github/actions/setup-uv/: action.yml
.github/workflows/: aux_tests.yml  data_tests.yml  docker.yaml  inference_tests.yml  integration-tests.yml  pypi-release.yml  style_check.yml  tests.yml  text_tests.yml  tts_tests.yml  tts_tests2.yml  vocoder_tests.yml  xtts_tests.yml  zoo_tests0.yml  zoo_tests1.yml  zoo_tests2.yml
TTS/: .models.json  __init__.py  api.py  model.py
TTS/demos/xtts_ft_demo/: requirements.txt  xtts_demo.py
TTS/demos/xtts_ft_demo/utils/: gpt_train.py
TTS/encoder/: dataset.py
TTS/encoder/models/: base_encoder.py
TTS/encoder/utils/: generic_utils.py  prepare_voxceleb.py  training.py
TTS/server/: README.md  server.py
TTS/server/templates/: index.html
TTS/tts/configs/: bark_config.py
TTS/tts/datasets/: __init__.py  dataset.py  formatters.py
TTS/tts/layers/: losses.py
TTS/tts/layers/bark/: inference_funcs.py  load_model.py  model.py  model_fine.py
TTS/tts/layers/bark/hubert/: kmeans_hubert.py
TTS/tts/layers/delightful_tts/: acoustic_model.py
TTS/tts/layers/overflow/: common_layers.py  neural_hmm.py
TTS/tts/layers/tacotron/: tacotron.py
TTS/tts/layers/tortoise/: arch_utils.py  audio_utils.py  autoregressive.py  diffusion_decoder.py  dpm_solver.py
TTS/tts/layers/vits/: networks.py
TTS/tts/layers/xtts/: dvae.py  gpt.py  hifigan_decoder.py  perceiver_encoder.py  stream_generator.py  tokenizer.py  xtts_manager.py  zh_num2words.py
TTS/tts/layers/xtts/trainer/: dataset.py  gpt_trainer.py
TTS/tts/models/: __init__.py  align_tts.py  bark.py  base_tacotron.py  base_tts.py  delightful_tts.py  forward_tts.py  glow_tts.py  neuralhmm_tts.py  overflow.py  tacotron.py  tacotron2.py  tortoise.py  vits.py  xtts.py
TTS/tts/utils/: fairseq.py  helpers.py  languages.py  managers.py  speakers.py  ssim.py
TTS/tts/utils/text/: characters.py  cleaners.py  tokenizer.py
TTS/tts/utils/text/bangla/: phonemizer.py
TTS/tts/utils/text/chinese_mandarin/: phonemizer.py
TTS/tts/utils/text/phonemizers/: __init__.py  base.py  espeak_wrapper.py  multi_phonemizer.py
TTS/utils/: download.py  downloaders.py  generic_utils.py  io.py  manage.py  synthesizer.py
TTS/utils/audio/: numpy_transforms.py  processor.py  torch_transforms.py
TTS/vc/models/: __init__.py  base_vc.py  freevc.py
TTS/vc/modules/freevc/: commons.py  mel_processing.py  modules.py
TTS/vc/modules/freevc/speaker_encoder/: speaker_encoder.py
TTS/vc/modules/freevc/wavlm/: __init__.py  wavlm.py
TTS/vocoder/datasets/: __init__.py  gan_dataset.py  wavegrad_dataset.py  wavernn_dataset.py
TTS/vocoder/layers/: losses.py
TTS/vocoder/models/: __init__.py  gan.py  hifigan_generator.py  melgan_generator.py  parallel_wavegan_discriminator.py  parallel_wavegan_generator.py  univnet_generator.py  wavegrad.py  wavernn.py
TTS/vocoder/utils/: generic_utils.py
dockerfiles/: Dockerfile.dev
docs/source/: conf.py  docker_images.md  faq.md  finetuning.md  inference.md  installation.md  tutorial_for_nervous_beginners.md
docs/source/main_classes/: trainer_api.md
docs/source/models/: bark.md  xtts.md
recipes/ljspeech/xtts_v1/: train_gpt_xtts.py
recipes/ljspeech/xtts_v2/: train_gpt_xtts.py
scripts/: generate_requirements.py
tests/: __init__.py
tests/data_tests/: test_loader.py
tests/text_tests/: test_phonemizer.py  test_text_cleaners.py
tests/tts_tests/: test_helpers.py  test_losses.py  test_tacotron_model.py  test_vits.py
tests/tts_tests2/: test_glow_tts.py
tests/vc_tests/: test_freevc.py
tests/vocoder_tests/: test_wavegrad_train.py
tests/zoo_tests/: test_models.py
